plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.cinema'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    // Spring Milestone Repository (Spring Boot 4.x)
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {

    /* ===============================
     * Spring Boot Starters
     * =============================== */
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // AOP - Spring AOP + AspectJ
    implementation 'org.springframework:spring-aop'
    implementation 'org.aspectj:aspectjweaver'

    /* ===============================
     * Development Tools
     * =============================== */
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    /* ===============================
     * JSON - Gson (Jackson 대신 사용)
     * =============================== */
    implementation 'com.google.code.gson:gson'

    /* ===============================
     * QueryDSL (JPA + Jakarta)
     * =============================== */
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    /* ===============================
     * Database (Runtime)
     * =============================== */
    runtimeOnly 'com.mysql:mysql-connector-j'

    /* ===============================
     * Redis - Redisson (분산 락)
     * =============================== */
    implementation 'org.redisson:redisson-spring-boot-starter:3.40.2'

    /* ===============================
     * Lombok
     * =============================== */
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    /* ===============================
     * JWT (jjwt 0.12.x)
     * =============================== */
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-gson:0.12.6'

    /* ===============================
     * Test
     * =============================== */
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

/* ===============================
 * QueryDSL Q클래스 생성 디렉토리
 * =============================== */
def querydslDir = layout.buildDirectory.dir("generated/querydsl")

sourceSets {
    main {
        java {
            srcDirs += querydslDir
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.generatedSourceOutputDirectory.set(querydslDir.get().asFile)
}

clean {
    delete querydslDir
}
